--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
 
-    <h1 class="some-heading">GIT WORKFLOW WORKSHOW</h1>
+    <h1 class="some-heading">GIT WORKFLOW WORKSHOP</h1>
+    <h2>Hello Iam Mohammed</h2>
 
 </body>
 
